--- a/DaPP/package.json
+++ b/DaPP/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test",
+    "//": "solidity-coverage"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,8 @@
   },
   "dependencies": {
     "truffle": "^4.1.13",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.34",
+    "//": "^0.0.5"
   },
   "homepage": "https://github.com/wom-token/WOMDaPP#readme"
 }
