--- a/DaPP/package.json
+++ b/DaPP/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "truffle test",
-    "//": "solidity-coverage"
+    "test": "truffle test"
   },
   "repository": {
     "type": "git",
@@ -18,8 +17,7 @@
   },
   "dependencies": {
     "truffle": "^4.1.13",
-    "web3": "^1.0.0-beta.34",
-    "//": "^0.0.5"
+    "web3": "^1.0.0-beta.34"
   },
   "homepage": "https://github.com/wom-token/WOMDaPP#readme"
 }
