--- a/DutchAuction/Ethereum/package.json
+++ b/DutchAuction/Ethereum/package.json
@@ -7,9 +7,10 @@
     "test": "test"
   },
   "dependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "chai-bignumber": "^2.0.2",
     "ethereumjs-util": "^5.2.0",
+    "pify": "^4.0.1",
     "sha3": "^1.2.2",
     "solc": "^0.4.25",
     "solcheck": "^0.1.3",
